--- a/pom.xml
+++ b/pom.xml
@@ -1308,35 +1308,39 @@
     <profile>
       <id>coverage</id>
       <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <!-- Specific to generate mapping between tests and covered code -->
+                <properties>
+                  <property>
+                    <name>listener</name>
+                    <value>${jacoco.listener}</value>
+                  </property>
+                </properties>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <configuration>
+                <!-- Specific to generate mapping between tests and covered code -->
+                <properties>
+                  <property>
+                    <name>listener</name>
+                    <value>${jacoco.listener}</value>
+                  </property>
+                </properties>
+                <!-- Let's put failsafe reports with surefire to have access to tests failures/success reports in sonar -->
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
         <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <!-- Specific to generate mapping between tests and covered code -->
-              <properties>
-                <property>
-                  <name>listener</name>
-                  <value>${jacoco.listener}</value>
-                </property>
-              </properties>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <!-- Specific to generate mapping between tests and covered code -->
-              <properties>
-                <property>
-                  <name>listener</name>
-                  <value>${jacoco.listener}</value>
-                </property>
-              </properties>
-              <!-- Let's put failsafe reports with surefire to have access to tests failures/success reports in sonar -->
-              <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            </configuration>
-          </plugin>
           <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
