--- a/pom.xml
+++ b/pom.xml
@@ -1529,6 +1529,32 @@
       </build>
     </profile>
     <profile>
+      <id>fix-javadocs</id>
+      <build>
+        <defaultGoal>javadoc:fix</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <defaultAuthor>${project.organization.name}</defaultAuthor>
+              <defaultVersion></defaultVersion>
+              <fixTags>author,since,param,return,throws,link</fixTags>
+              <level>private</level>
+              <force>true</force>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>clirr-maven-plugin</artifactId>
+                <version>${version.clirr.plugin}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>fix-headers</id>
       <build>
         <defaultGoal>validate</defaultGoal>
