--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,19 @@
             <!-- Allow to activate/deactivate the recompression of zip files -->
             <recompressZippedFiles>${maven.assembly.recompressZippedFiles}</recompressZippedFiles>
           </configuration>
+          <!-- Workaround for http://jira.codehaus.org/browse/MASSEMBLY-722 the time to upgrade to 2.5.1 -->
+          <dependencies>
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-archiver</artifactId>
+              <version>2.8.2</version>
+            </dependency>
+            <dependency>
+              <groupId>org.codehaus.plexus</groupId>
+              <artifactId>plexus-io</artifactId>
+              <version>2.3.3</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
