--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>maven-parent-pom</artifactId>
   <version>16-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>eXo parent POM</name>
+  <name>eXo PLF:: Parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
   <url>${site.url}</url>
   <inceptionYear>2003</inceptionYear>
